fix: fixed some bugs, changed style for dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+$color-black-pure: #1a1a1a;
 $color-black: #1f2328;
 
 #root {
@@ -71,6 +72,12 @@ main {
   max-width: 1200px;
 }
 
+@media (prefers-color-scheme: dark) {
+  header {
+    background-color: $color-black-pure;
+  }
+}
+
 // ============ SEARCH MAIN PAGE ============
 
 .search {
@@ -130,6 +137,15 @@ main {
       &:last-child {
         margin-bottom: 0;
       }
+    }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .repo-item {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    &__title {
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3);
     }
   }
 }
@@ -319,6 +335,35 @@ main {
       background-color: rgba(73, 82, 255, 0.123);
       // border-right: 2px solid rgba(0, 0, 0, 0.3);
       // outline: 10px auto -webkit-focus-ring-color;
+    }
+  }
+}
+
+// ========== settings page =========
+
+.settings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  // justify-content: center;
+  width: 100%;
+  gap: 20px;
+  & form {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    & label {
+      flex: 0 0 450px;
+      text-align: end;
+    }
+    & input {
+      flex: 0 1 200px;
+      min-width: 70px;
+    }
+    & button {
+      min-width: 100px;
     }
   }
 }
